--- a/videos.html
+++ b/videos.html
@@ -29,6 +29,7 @@
 
 						 	<h1>Videos</h1>
 						 	<hr>
+						 	<div>
 
 						 		<div class="video-cl">
 						 			<h3>Tesla in China</h3>
@@ -56,6 +57,7 @@
 						 		</div>
 
 						</div><div class="clearfix"></div>
+					</div>
 				 	
 					 	<footer>
 					 		<div class="joinus">
