--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 
 		<title>Tesla Romania official Website - My website</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src="scripts.js" defer></script>
 		</head>
 
 		<body>
+			
 		 	<main>
+				
 			 	<header>
 
 			 		<div class="top">
@@ -27,14 +30,14 @@
 			 			</div>
 			 		</div>	 			
 			 	</header>
-
+				 <div id="backdrop"></div>
 					 	<div id="content">
 					 		<div>
 					 		    <div class="bottom">
 					 		    	<div class="testdrive">
 					 		    		<h2>Tesla Model S</h2>
 					 		    		<p>The Tesla Model S is a full-sized electric five-door, luxury liftback, produced by Tesla Motors. Since its introduction in June 2012 it has achieved rapidly growing sales, particularly in Norway and California. </p>
-					 		    		<a href="test-drive.html" class="btn">Test Drive</a>
+										 <a href="#" data-text="Here you can chose your car" class="info-modal btn">Test Drive</a>
 					 		    	</div>
 					 		    	<div class="lg-background">
 					 		    		<img src="images/lg-background.png">
